--- a/my_game/rebar.config
+++ b/my_game/rebar.config
@@ -6,6 +6,10 @@
         my_game,
         sasl
     ]},
+    {release, {my_game_client, "0.1.0"}, [
+        my_game_client,
+        sasl
+    ]},
     {mode, dev},
     {include_erts, true},
     {extended_start_script, true},
